--- a/class07/eventhandlers_start.html
+++ b/class07/eventhandlers_start.html
@@ -36,8 +36,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12">
-          <label id="changeLabel"></label>
-          <div class="interact"></div>
+          <label id="changeLabel">LABEL</label>
+        </div>
+        <div class="col-xs-12">
+          <div class="interact">INTERACTIVE AREA</div>
         </div>
       </div>
     </div>
