--- a/class07/eventhandlers_start.html
+++ b/class07/eventhandlers_start.html
@@ -38,6 +38,8 @@
         <div class="col-xs-12">
           <label id="changeLabel">LABEL</label>
         </div>
+      </div>
+      <div class="row">
         <div class="col-xs-12">
           <div class="interact">INTERACTIVE AREA</div>
         </div>
